Fixed a css bug that caused featued movies to be misaligned if the movie name was too long

--- a/assign5/src/index.css
+++ b/assign5/src/index.css
@@ -152,9 +152,15 @@ body {
     align-items: center;
 }
 
+.mov {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+}
+
 .mov-label {
-    font-size: 40px;
-    width: 380px;
+    font-size: 35px;
+    width: auto;
 }
 
 .featured-header {
